--- a/package.json
+++ b/package.json
@@ -20,14 +20,26 @@
         "@angular/http": "5.2.11",
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
+        "@ionic-native/base64": "^4.12.0",
         "@ionic-native/camera": "^4.11.0",
         "@ionic-native/core": "~4.11.0",
+        "@ionic-native/image-picker": "^4.12.0",
         "@ionic-native/splash-screen": "~4.11.0",
         "@ionic-native/status-bar": "~4.11.0",
         "@ionic/pro": "2.0.3",
         "@ionic/storage": "2.1.3",
+        "angularfire2": "^5.0.0-rc.11",
+        "com-badrit-base64": "^0.2.0",
+        "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^4.0.3",
+        "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-firebase": "^1.0.5",
+        "cordova-plugin-ionic-keyboard": "^2.0.5",
+        "cordova-plugin-ionic-webview": "^2.0.0",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-telerik-imagepicker": "^2.2.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "firebase": "^5.4.0",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
         "rxjs": "5.5.11",
@@ -42,7 +54,19 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-firebase": {},
-            "cordova-plugin-camera": {}
-        }
+            "cordova-plugin-camera": {},
+            "cordova-plugin-telerik-imagepicker": {
+                "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
+            },
+            "com-badrit-base64": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-whitelist": {}
+        },
+        "platforms": [
+            "android"
+        ]
     }
 }
